Removed Prefix and begin mirgrating over to 1.20.4 usage of PotionEffects and similar. Updated - 1.20.4 Fixing messages.yml soon.